git hub pages setting

--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "portfolio-2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://salatsynskahv.github.io/portfolio",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@types/node": "20.5.1",
